--- a/tc.html
+++ b/tc.html
@@ -51,24 +51,12 @@ h1 {
     margin-bottom: 25px;
 }
 
-/* TABS */
-.tabs {
-    display: flex;
-    justify-content: flex-start;
-    gap: 30px;
+/* TITULO SECCIÓN */
+.tab-title {
+    font-size: 20px;
+    font-weight: 600;
     margin-bottom: 25px;
-}
-
-.tab {
-    font-size: 17px;
-    padding-bottom: 8px;
-    cursor: pointer;
-    opacity: 0.7;
-}
-
-.tab.active {
-    border-bottom: 2px solid #00b3ff;
-    opacity: 1;
+    color: #00b3ff;
 }
 
 /* LABEL */
@@ -161,11 +149,7 @@ button:hover {
     <div class="step">PASO 3 DE 3</div>
     <h1>¡A disfrutar!</h1>
 
-    <!-- TABS -->
-    <div class="tabs">
-        <div class="tab active">💳 Crédito/Débito</div>
-        <div class="tab">🏦 Mercado Pago</div>
-    </div>
+    <div class="tab-title">💳 Crédito/Débito</div>
 
     <!-- FORMULARIO -->
 
