--- a/tc.html
+++ b/tc.html
@@ -111,6 +111,18 @@ input, select {
     opacity: .9;
 }
 
+/* FILA FECHA / CVV */
+.row-double {
+    display: flex;
+    gap: 15px;
+    margin-top: 5px;
+}
+
+.field-group {
+    flex: 1;
+    min-width: 0;
+}
+
 /* BOTÓN FINAL */
 button {
     width: 100%;
@@ -143,6 +155,14 @@ footer a {
     color: #00c8ff;
     text-decoration: none;
     font-size: 13px;
+}
+
+/* RESPONSIVE: si la pantalla es muy angosta, se ponen uno debajo del otro */
+@media (max-width: 480px) {
+    .row-double {
+        flex-direction: column;
+        gap: 0;
+    }
 }
 </style>
 </head>
@@ -180,13 +200,13 @@ footer a {
         </div>
     </div>
 
-    <div style="display:flex; gap:15px; margin-top:15px;">
-        <div style="flex:1;">
+    <div class="row-double">
+        <div class="field-group">
             <label>FECHA DE VENCIMIENTO</label>
             <input type="text" placeholder="MM/AA" maxlength="5">
         </div>
 
-        <div style="flex:1;">
+        <div class="field-group">
             <label>CÓDIGO DE SEGURIDAD</label>
             <input type="text" placeholder="CVV" maxlength="4">
         </div>
