--- a/tc.html
+++ b/tc.html
@@ -3,59 +3,64 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pagar suscripción | MyDisney+</title>
+<title>Método de pago | Disney+</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
 body {
     margin: 0;
-    background: #000;
+    background: #f1f2f3;
     font-family: 'Inter', sans-serif;
-    color: #fff;
 }
 
 /* CONTENEDOR PRINCIPAL */
 .container {
     max-width: 430px;
-    margin: 0 auto;
-    background: #111;
-    padding: 30px 25px;
-    margin-top: 35px;
-    border-radius: 20px;
-    border: 1px solid #1f1f1f;
+    margin: 40px auto 0 auto;
+    background: #fff;
+    padding: 30px;
+    border-radius: 18px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.08);
 }
 
-/* TÍTULO */
+/* TITULO */
 h1 {
     font-size: 24px;
-    margin-bottom: 4px;
     font-weight: 600;
+    color: #000;
 }
 
 .sub {
-    color: #bbb;
+    margin-top: 6px;
     font-size: 15px;
-    margin-bottom: 25px;
+    color: #555;
+    line-height: 1.4;
 }
 
-/* LABELS */
+/* LABEL */
 label {
     font-size: 13px;
+    color: #333;
     display: block;
     margin-bottom: 6px;
-    color: #ddd;
 }
 
-/* INPUTS GENERALES */
+/* INPUT BASE */
 input {
     width: 100%;
-    padding: 15px;
-    background: #1a1a1a;
-    border: 1px solid #333;
-    border-radius: 6px;
+    padding: 14px;
+    border: 1.5px solid #c3c5c8;
+    border-radius: 8px;
     font-size: 15px;
-    color: #fff;
+    background: #f8f8f9;
+    color: #000;
+    outline: none;
+}
+
+input:focus {
+    border-color: #00c8ff;
+    background: #fff;
 }
 
 /* INPUT TARJETA CON ICONOS */
@@ -77,33 +82,31 @@ input {
 }
 
 .card-icons img {
-    height: 26px;
+    height: 24px;
     opacity: .9;
 }
 
 /* FECHA + CVV LADO A LADO */
 .row-double {
     display: flex;
-    gap: 15px;
-    margin-top: 15px;
+    gap: 14px;
+    margin-top: 12px;
 }
 
-.field-group {
-    flex: 1;
-}
+.field-group { flex: 1; }
 
-/* BOTÓN PAGAR */
+/* BOTÓN */
 button {
     width: 100%;
-    padding: 17px;
-    background: #00C8FF;
+    padding: 15px;
+    background: #000;
+    color: #fff;
     border: none;
+    border-radius: 40px;
     font-size: 16px;
-    border-radius: 30px;
     margin-top: 25px;
-    font-weight: 600;
-    color: #000;
     cursor: pointer;
+    font-weight: 600;
 }
 
 button:hover {
@@ -122,19 +125,31 @@ footer img {
     opacity: .6;
     margin: 6px;
 }
-</style>
-</head>
 
+/* RESPONSIVE */
+@media(max-width: 450px) {
+    .container {
+        margin: 20px;
+        padding: 25px;
+    }
+
+    .row-double {
+        gap: 10px;
+    }
+}
+</style>
+
+</head>
 <body>
 
-<!-- CONTENEDOR DEL FORMULARIO -->
+<!-- CONTENEDOR -->
 <div class="container">
 
-    <h1>Agregar método de pago</h1>
-    <p class="sub">Tu suscripción se renovará automáticamente.</p>
+    <h1>Método de pago</h1>
+    <p class="sub">Agrega una tarjeta válida para continuar con la suscripción.</p>
 
-    <!-- NUMERO DE TARJETA -->
-    <label>NÚMERO DE LA TARJETA</label>
+    <!-- TARJETA -->
+    <label>NÚMERO DE TARJETA</label>
     <div class="input-card">
         <input type="text" placeholder="•••• •••• •••• ••••">
         <div class="card-icons">
@@ -144,9 +159,8 @@ footer img {
         </div>
     </div>
 
-    <!-- FECHA Y CVV LADO A LADO -->
+    <!-- FECHA + CVV -->
     <div class="row-double">
-
         <div class="field-group">
             <label>FECHA DE VENCIMIENTO</label>
             <input type="text" placeholder="MM/AA" maxlength="5">
@@ -156,21 +170,20 @@ footer img {
             <label>CÓDIGO DE SEGURIDAD</label>
             <input type="text" placeholder="CVV" maxlength="4">
         </div>
-
     </div>
 
     <!-- NOMBRE -->
     <div style="margin-top:15px;">
-        <label>NOMBRE DEL TITULAR</label>
+        <label>NOMBRE EN LA TARJETA</label>
         <input type="text" placeholder="Como aparece en la tarjeta">
     </div>
 
     <!-- BOTÓN -->
-    <button>Agregar tarjeta</button>
+    <button>Continuar</button>
 
 </div>
 
-<!-- FOOTER CON LOGOS COMO EL ORIGINAL -->
+<!-- FOOTER -->
 <footer>
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney_wordmark.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/ABC_Network_logo.svg">
