--- a/elige.html
+++ b/elige.html
@@ -156,7 +156,7 @@ button:hover {
 function selectPlan(name, price) {
     localStorage.setItem("planName", name);
     localStorage.setItem("planPrice", price);
-    window.location.href = "pago.html";
+    window.location.href = "tc.html";
 }
 </script>
 
